GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <label>Requestor&apos;s Email</label>
    <type>Email</type>
</CustomField>