GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Requestor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Phone__c</fullName>
    <inlineHelpText>Requestor&apos;s Phone</inlineHelpText>
    <label>Requestor&apos;s Phone</label>
    <type>Phone</type>
</CustomField>