GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Rush__c.field-meta.xml
<CustomField>
    <fullName>Rush__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Rush</description>
    <label>Rush</label>
    <type>Checkbox</type>
</CustomField>