GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Scheduled_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Appointment_Date__c</fullName>
    <label>Scheduled Appointment Date</label>
    <type>Date</type>
</CustomField>