GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Service_LOC__c.field-meta.xml
<CustomField>
    <fullName>Service_LOC__c</fullName>
    <label>Service LOC</label>
    <length>250</length>
    <type>Text</type>
</CustomField>