GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Services_Provided__c</fullName>
    <label>Services Provided</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>