GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Special_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Special_Concerns__c</fullName>
    <description>Special Concerns for UW Intake</description>
    <label>Special Concerns</label>
    <type>TextArea</type>
</CustomField>