GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Special_INST_to_Nurse__c.field-meta.xml
<CustomField>
    <fullName>Special_INST_to_Nurse__c</fullName>
    <description>Special instructions to Nurse</description>
    <label>Spl Instructions to Nurse</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>