GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Special_Instruction_From_Insurance_Compa__c.field-meta.xml
<CustomField>
    <fullName>Special_Instruction_From_Insurance_Compa__c</fullName>
    <label>Spl Instructions From Insurance Company</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>