GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/webAgentId__c.field-meta.xml
<CustomField>
    <fullName>webAgentId__c</fullName>
    <label>webAgentId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>