GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/webRequestorId__c.field-meta.xml
<CustomField>
    <fullName>webRequestorId__c</fullName>
    <label>webRequestorId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>