GloablServices/keshavglobal/force-app/main/default/objects/Case/fields/Welcome_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Sent_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Email Sent Date</label>
    <type>Checkbox</type>
</CustomField>