GloablServices/keshavglobal/force-app/main/default/objects/Case/validationRules/Prevent_Ownership_Change_From_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Ownership_Change_From_User</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId),
NOT(BEGINS( PRIORVALUE(OwnerId), &apos;00G&apos;)),
NOT(BEGINS( OwnerId, &apos;00G&apos;)),
NOT(IsNew())
)</errorConditionFormula>
    <errorMessage>Cannot take ownership from another user</errorMessage>
</ValidationRule>