GloablServices/keshavglobal/force-app/main/default/objects/Case/listViews/Closed_Service_Intake_Requests.listView-meta.xml
<ListView>
    <fullName>Closed_Service_Intake_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Claim__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>confirmation_number__c</columns>
    <columns>Date_of_Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Reason_Code__c</field>
        <operation>equals</operation>
        <value>Bill Cancelled Fee.,No Bill</value>
    </filters>
    <label>Cancelled Service Intake Requests</label>
</ListView>